fixed files, and also added a scanning module, not working on emulator right now. Using a mac to work on, so unsure if that makes an issue. Should run on a andriod device to determine if its an issue.

--- a/CulturalCenterLibrary/app/src/main/res/values/strings.xml
+++ b/CulturalCenterLibrary/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="e_g_john_doe">e.g. John Doe</string>
     <string name="cultural_center_library">Cultural Center Library</string>
     <string name="qr_code_found">QR Code Found</string>
+    <string name="barcode_text">Barcode Text</string>
+    <string name="pause">Pause</string>
+    <string name="resume">Resume</string>
+    <string name="barcode_view">Barcode scanning view</string>
 </resources>
