--- a/CulturalCenterLibrary/app/src/main/res/values/strings.xml
+++ b/CulturalCenterLibrary/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="pause">Pause</string>
     <string name="resume">Resume</string>
     <string name="barcode_view">Barcode scanning view</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="app_widget_description">This is an app widget description</string>
 </resources>
